--- a/style.css
+++ b/style.css
@@ -5,21 +5,234 @@
     font-family: Helvetica;
 }
 
-body{
-    background-color: white;
-
+ul{
+    list-style: none;
 }
 
+body{
+    background-color: #F2F2F2;
+}
 
 header{
-    background-color: orange;
+    display: flex;
+    color: white;
+    background-image: linear-gradient(to right bottom, #FAB818 0%, #F58A1C 50%, #F2661F 100%);
+    justify-content: center;
+    align-items: center;
+    height: 5vw;
+    margin-bottom: 5vh;
 }
 
-section{
-    align-items: center;
+main{
+    display: flex;
     justify-content: center;
 }
 
+.container{
+    display: grid;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    background-color: white;
+    border: 1px solid #ECECEC;
+    width: 80%;
+    padding: 5vh;
+}
+
+.box-buscador{
+    display: flex;
+    height: 9vh;
+    margin-bottom: 3vh;
+    width: 90%;
+    background-color: #4D4D4D;
+    justify-content:end;
+    align-items: center;
+    padding-right: 4vh;
+    border-radius: 8px;
+}
+
+.box-buscador button{
+    font-size: 3vh;
+    height: 5vh;
+    width: 25vh;
+    background-color: #F2661F;
+    border: none;
+    color: white;
+    margin-left: 6px;
+    border-radius: 4px;
+}
+
+.button-buscar:hover{
+    cursor: pointer;
+    background-color: #F58A1C;
+}
+
+.button-buscar:active{
+    background-color: #FAB818;
+    color: #4D4D4D;
+}
+
+.box-buscador input {
+   font-size: 3vh;
+   height: 5vh;
+   border: 1px white solid;
+   color: white;
+   background-color: #4D4D4D;
+   border-radius: 4px;
+   padding-left: 4vh;
+}
+
+.input-busca:hover{
+    cursor: pointer;
+    border: 1px solid #FAB818;
+    background-color: #616161;
+}
+
+.box-catalogo{
+    display: flex;
+    justify-content:space-between;
+    align-content: center;;
+    margin-top: 5vh;
+    width: 90%;
+}
+
+.filmes{
+    display: flex;
+    margin-top: 6vh;
+    border: 1px solid orange;
+    width: 20vw;
+    display: grid;
+    margin-left: 3vw;
+    align-items: center;
+    justify-items: center;   
+}
+
+.filmes img{
+    height: 21vw;
+    padding: 1vw
+}
+
+.filmes ul{
+    margin-bottom: 15px;
+    padding: 15px;
+}
+
+li{
+    font-size: 2vh;
+}
+
+/* footer{
+    margin-top: 5vh;
+    display: grid;
+    justify-items: center;
+    align-items: center ;
+    background-color: #F2661F;
+    color: white;
+    width: 100%;
+    grid-template-columns: 1fr 1fr;
+    height: 7vh;
+} */
+
 footer{
-    background-color: orange;
+    margin-top: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F2661F;
+    color: white;
+    width: 100%;
+    height: 7vh;
+    flex-wrap: wrap;
+}
+
+footer span{
+    margin-right: 20vw;
+    height: 2vw;
+    padding-top: 0.5vw;
+}
+
+footer img{
+    height: 2.3vw;
+    margin-right: 2vw;
+    padding-top: 0.5vw;
+}
+
+@media screen and (max-device-width:800px) {
+
+    header{
+        display: flex;
+        height: 10vh;
+        font-size: 3vh;
+        align-items: center;
+        position:fixed;
+        top: 0;
+        width: 100%;
+    }
+
+    body{
+        background-color: white;
+    }
+
+    .container{
+        border:transparent;
+        background-color: transparent;
+    }
+
+    .box-buscador{
+        background-color: white;
+        width: 100%;
+        position: fixed;
+        top: 10vh;
+        border-radius: 0px;
+        height: 10vw;
+    }
+
+    .box-buscador button{
+        font-size: 3vh;
+        height: 8vw;
+        width: 15vw;
+        margin: 0.5vh;
+        margin-left: 5vw;
+        border-radius: 20px;
+    }
+    
+    .box-buscador input {
+       font-size: 3vh;
+       height: 8vw;
+       padding: 2vh;
+       border-radius: 20px;
+       background-color: #E6E6E6;
+   
+    }
+
+    .box-catalogo{
+        margin-top: 20vh;
+        flex-direction: column;
+    }
+
+    .filmes{
+        margin-top: 10vh;
+        flex-direction: column;
+        width: 50vw;
+    }
+
+    .filmes img{
+        height: 50vh;
+    }
+
+    li{
+        font-size: 3vw;
+    }
+
+    footer{
+        margin-top: 10vh;
+        font-size: 3vw;
+        width: 100%;   
+    }
+
+    footer img{
+        height: 5vw;
+        margin-left: 3vw;
+    }
+ 
 }
