--- a/style.css
+++ b/style.css
@@ -36,12 +36,13 @@ main{
     background-color: white;
     border: 1px solid #ECECEC;
     width: 80%;
-    padding: 5vh;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
 }
 
 .box-buscador{
     display: flex;
-    height: 9vh;
+    height: 60px;
     margin-bottom: 3vh;
     width: 90%;
     background-color: #4D4D4D;
@@ -53,7 +54,7 @@ main{
 
 .box-buscador button{
     font-size: 3vh;
-    height: 5vh;
+    height: 40px;
     width: 25vh;
     background-color: #F2661F;
     border: none;
@@ -74,7 +75,7 @@ main{
 
 .box-buscador input {
    font-size: 3vh;
-   height: 5vh;
+   height: 40px;
    border: 1px white solid;
    color: white;
    background-color: #4D4D4D;
@@ -91,41 +92,34 @@ main{
 .box-catalogo{
     display: flex;
     justify-content:space-between;
-    align-content: center;;
+    align-content: center;
     margin-top: 5vh;
     width: 90%;
-    /* flex-wrap: wrap;  REMOVER APÓS AJUSTAR AS IMAGENS*/ 
+    flex-wrap: wrap;
 }
 
-/* CAIXA DOS FILMES, AJUSTAR AQUI! */
 .filmes{
     display: flex;
     margin-top: 6vh;
     border: 1px solid orange;
-    width: 20vw;
-    display: grid;
+    width: 220px;
+    flex-direction: column;
     margin-left: 3vw;
     align-items: center;
     justify-items: center;   
 }
 
-/* EM SEGUIDA, AJUSTAR AS IMAGENS DENTRO DO BOX */
 .filmes img{
-    height: 21vw;
-    padding: 1vw;
-    width: auto;
+    height: auto;
+    width: 200px;
+    display: flex;
+    margin-top: 8px;
 }
 
 .filmes ul{
-    margin-bottom: 15px;
     padding: 15px;
+    font-size: 12px;
 }
-
-li{
-    font-size: 2vh;
-}
-
-
 
 footer{
     margin-top: 5vh;
@@ -136,97 +130,97 @@ footer{
     color: white;
     width: 100%;
     height: 7vh;
-    flex-wrap: wrap;
 }
 
 footer span{
-    margin-right: 20vw;
-    height: 2vw;
+    margin-right: 30px;
+    height: auto;
     padding-top: 0.5vw;
 }
 
 footer img{
-    height: 2.3vw;
+    height: 24px;
+    width: auto;
     margin-right: 2vw;
     padding-top: 0.5vw;
 }
 
-@media screen and (max-device-width:800px) {
+@media screen and (max-device-width:800px) and (min-device-width: 480px) {
 
     header{
-        display: flex;
         height: 10vh;
         font-size: 3vh;
-        align-items: center;
-        position:fixed;
-        top: 0;
-        width: 100%;
-    }
-
-    body{
-        background-color: white;
-    }
-
-    .container{
-        border:transparent;
-        background-color: transparent;
-    }
-
-    .box-buscador{
-        background-color: white;
-        width: 100%;
-        position: fixed;
-        top: 10vh;
-        border-radius: 0px;
-        height: 10vw;
     }
 
     .box-buscador button{
-        font-size: 3vh;
-        height: 8vw;
-        width: 15vw;
         margin: 0.5vh;
-        margin-left: 5vw;
-        border-radius: 20px;
+        margin-left: 2vw;
     }
     
     .box-buscador input {
-       font-size: 3vh;
-       height: 8vw;
-       padding: 2vh;
-       border-radius: 20px;
-       background-color: #E6E6E6;
-   
+       margin-left: 8px;
     }
 
     .box-catalogo{
-        margin-top: 20vh;
         flex-direction: column;
     }
 
     .filmes{
         margin-top: 10vh;
-        flex-direction: column;
-        width: 50vw;
     }
 
-    .filmes img{
-        height: 50vh;
+    ul{
+        font-size: 10px;
     }
-
-    li{
-        font-size: 3vw;
-    }
-
-    footer{
-        margin-top: 10vh;
-        font-size: 3vw;
-        width: 100%;   
-    }
-
+ 
     footer img{
         height: 5vw;
         margin-left: 3vw;
     }
  
+}
+
+@media screen and (max-device-width:480px){
+
+    header{   
+        height: 10vh;
+    }
+
+    .box-buscador{
+        width: 96%;
+        border-radius: 4px;
+    }
+
+    .box-buscador button{
+        margin-left: 4px;
+        border-radius: 4px;
+        width: 30%;
+        border: 1px solid #FAB818;
+        font-size: 5vw;
+    }
+    
+    .box-buscador input {
+       border-radius: 4px;
+       width: 70%;
+       margin-left: 8px;
+       font-size: 5vw;
+    }
+
+    .box-catalogo{
+        flex-direction: column;
+    }
+
+    ul{
+        font-size: 10px;
+    }
+ 
+    footer{
+        font-size: 1.4vh;
+    }
+
+    footer img{
+        height: 5vw;
+        margin-right: 3vw;
+    }
+
 }
